fix style in real phone

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="video">Video</string>
     <string name="user">User</string>
     <string name="click_to_search">click to search</string>
+    <string name="type_in_here">type in here</string>
 </resources>
